frontpage css completed(minus lucky wheel)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
     <head>
         <title>Foogle</title>
         <link rel="stylesheet" href="css/front.css">
-
     </head>
     <body>
         <div class="top">
@@ -28,10 +27,10 @@
                     <div class="mic"><img id="mic" src="images/mic.jpg"></div>
                 </div>
                 <div class="buttons">
-                    <div class="left"><input class="search_b_l" type="button" value="Search"></div>
+                    <div class="left"><input class="search_b_l" type="button" value="Foogle Search"></div>
                     <div class="right">
                         <input class="search_b_r" type="button" value="I'm Feeling Lucky">
-                        <div class="worlds">
+                        <div class="words">
                             <span>I'm Feeling Hungry</span>
                             <span>I'm Feeling Pretty</span>
                             <span>I'm Feeling Happy</span>
