--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
             <div class="right">
                 <a href="#">Email</a>
                 <a href="#">Memories</a>
-                <a href="#" id="app"></a>
-                <a href="#" id="bell"></a>
-                <a href="#" id="user"></a>
+                <a href="#" id="app"><img src="images/app.png" width="20px" height="20px"></a>
+                <a href="#" id="bell"><img src="images/bell.png" width="20px" height="20px" margin="5px"></a>
+                <a href="#" id="user"><img src="images/u.png" style="width: 32px; height: 32px; margin: -6px;"></a>
             </div>
         </div>
         <div class="body">
-            <div class="logo"><img id="logo" alt="Logo" src=""></div>
+            <div class="logo"><img id="logo" alt="Logo" src="images/logo.png" height="92px" width="272px"></div>
         </div>
         <div class="body">
             <form class="search">
                 <div class="input">
                     <div class="text"><input class="search_t" type="text"></div>
-                    <div class="mic"><img id="mic" src="images/mic.jpg"></div>
+                    <div class="mic"><img id="mic" src="images/mic.png" height="24px" width="24px"></div>
                 </div>
                 <div class="buttons">
                     <div class="left"><input class="search_b_l" type="button" value="Foogle Search"></div>
