result css completed, minor adjustment to result html

--- a/results.html
+++ b/results.html
@@ -5,7 +5,12 @@
     </head>
     <body>
         <div class="top">
-            <div class="logo"><img src="images/logo.png" height="120px" width="44px"></div>
+            <div class="logo"><img src="images/logo.png" height="44px" width="120px"></div>
+            <div class="right">
+                <a href="#" id="app"><img src="images/app.png" width="20px" height="20px"></a>
+                <a href="#" id="bell"><img src="images/bell.png" width="20px" height="20px" margin="5px"></a>
+                <a href="#" id="user"><img src="images/u.png" style="width: 32px; height: 32px; margin: -6px;"></a>
+            </div>
             <div class="content">
                 <div class="search">
                     <form>
@@ -16,12 +21,7 @@
                         <div class="button"><a href="#"><img src="images/search.png"></a></div>
                     </form>
                 </div>
-                <div class="right">
-                    <a href="#" id="app"><img src="images/app.png" width="20px" height="20px"></a>
-                    <a href="#" id="bell"><img src="images/bell.png" width="20px" height="20px" margin="5px"></a>
-                    <a href="#" id="user"><img src="images/u.png" style="width: 32px; height: 32px; margin: -6px;"></a>
-                </div>
-                <div class="nav">
+                                <div class="nav">
                     <a href="#" class="here">All</a>
                     <a href="#">News</a>
                     <a href="#">Videos</a>
@@ -36,12 +36,13 @@
             </div>
         </div>
         <div class="content">
+            <div class="result"><span class="date">About 74,100,000 results (0.94 seconds)</span></div>
             <div class="top">
                 <h1>1. TO CREATE A WEBSITE WITH WORDPRESS (OR JOOMLA & DRUPAL), USE ONE-CLICK INSTALLATION:</h1>
                 <p><ol>
                     <li>Log in to your hosting account.</li>
                     <li>Go to your control panel.</li>
-                    <li>Look for the “WordPress” or “<strong>Website</strong>” icon.</li>
+                    <li>Look for the &quot;WordPress&quot; or &quot;<strong>Website</strong>&quot; icon.</li>
                     <li>Choose the domain where you want to install your <strong>website</strong>.</li>
                 </ol></p>
                 <a class="more" href="#">More Items...</a>
@@ -56,7 +57,7 @@
             <div class="result">
                     <a href="#" class="title">build this webpage</a>
                     <span class="url">https://benjdelt.github.io/google-results/</span>
-                    <p><span class="date">About 2.690.000 results (0,31 seconds).</span> With zero coding experience, artist building 180 webpages in 180 days https://arstechnica.com/.</p>
+                    <p><span class="date"></span>About 2.690.000 results (0,31 seconds). With zero coding experience, artist building 180 webpages in 180 days https://arstechnica.com/.</p>
             </div>
             <div class="result">
                     <a href="#" class="title">Google Homepage</a>
@@ -92,9 +93,9 @@
                 <a href="#">the odin project</a>
                 <a href="#">180 sites</a>
             </div>
-            <div class="nav">
+            <div class="pages">
                 <span class="g">G</span>
-                <span class="o">o<a href="#" class="here"></a>1</a></span>
+                <span class="e">o<a href="#" class="here">1</a></span>
                 <span class="o">o<a href="#">2</a></span>
                 <span class="o">o<a href="#">3</a></span>
                 <span class="o">o<a href="#">4</a></span>
@@ -117,6 +118,7 @@
                 <a href="#">Privacy</a>
                 <a href="#">Terms</a>
             </div>
+            <div class="clear"></div>
         </div>
     </body>
 </html>
