linked the two pages and wrote down notes in readme

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
         <div class="body">
             <div class="daily">
-                An apple a a day and <a href="https://www.google.com/search?q=doctor">doctor</a> away!
+                This is the easy part, click <a href="results.html">results</a> to see the difficult part of the <a href="https://www.theodinproject.com/courses/web-development-101/lessons/html-css">assignment</a>.
             </div>
         </div>
     </body>
